--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
   </style>
 </head>
 <body>
-  <!-- Login / Signup -->
+  <!-- Login -->
   <div id="auth-section" class="card">
     <img src="" alt="Piggy Bank Logo" />
     <h1>Piggy Bank</h1>
-    <h2>Login / Signup</h2>
+    <h2>Login</h2>
     <input type="email" id="email" placeholder="Email"><br>
     <input type="password" id="password" placeholder="Password"><br>
     <button class="login-btn" onclick="login()">Login</button>
@@ -138,43 +138,34 @@
   </div>
 
   <script type="module">
-    // Keep Firebase app initialized for analytics (optional, can remove if you want)
-    //import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
-    //import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
-
-    //const firebaseConfig = {
-      //apiKey: "AIzaSyB03PiDFmzdKIGJsl9mBdSqjqcYQallUTk",
-      //authDomain: "piggybank-da942.firebaseapp.com",
-     // projectId: "piggybank-da942",
-    //  storageBucket: "piggybank-da942.firebasestorage.app",
-      //messagingSenderId: "270202155163",
-    //  appId: "1:270202155163:web:09e87be83fecc7fdbe163e",
-  //    measurementId: "G-B8QG7CDZ8J"
-    //};
-
-   // const app = initializeApp(firebaseConfig);
-   // const analytics = getAnalytics(app);
-
-    // --- Local Authentication ---
-
+    // Local authentication demo — fixed credentials only
     const VALID_EMAIL = "user@example.com";
     const VALID_PASSWORD = "password123";
 
+    // State
+    let loggedIn = false;
+
+    // DOM elements
     const authSection = document.getElementById("auth-section");
     const dashboard = document.getElementById("dashboard");
+
     const emailInput = document.getElementById("email");
     const passwordInput = document.getElementById("password");
+
     const categoryList = document.getElementById("category-list");
     const categorySelect = document.getElementById("category-select");
     const expenseList = document.getElementById("expense-list");
 
-    let loggedIn = false;
+    // Data (local only, no backend)
+    let categories = [];
+    let expenses = [];
 
-    // Signup disabled, just alert
+    // Signup function (disabled)
     function signup() {
-      alert("Signup is disabled in this local demo. Please use the fixed credentials to login.");
+      alert("Signup is disabled in this demo. Use:\nEmail: user@example.com\nPassword: password123");
     }
 
+    // Login function
     function login() {
       const email = emailInput.value.trim();
       const password = passwordInput.value;
@@ -184,7 +175,6 @@
         authSection.classList.add("hidden");
         dashboard.classList.remove("hidden");
 
-        // Load any data if you want here (currently no DB, so lists empty)
         loadCategories();
         loadExpenses();
       } else {
@@ -192,42 +182,95 @@
       }
     }
 
+    // Logout function
     function logout() {
       loggedIn = false;
       authSection.classList.remove("hidden");
       dashboard.classList.add("hidden");
       emailInput.value = "";
       passwordInput.value = "";
+      categories = [];
+      expenses = [];
     }
 
-    // Stub functions for categories and expenses since no Firebase DB
-
+    // Load categories into list and select
     function loadCategories() {
-      // Clear existing lists
       categoryList.innerHTML = "";
       categorySelect.innerHTML = "<option value=''>No Category</option>";
-      // No DB: you can implement localStorage or just keep empty for now
+
+      categories.forEach((c, idx) => {
+        categoryList.innerHTML += `<li>${c.name} - $${c.current_amount.toFixed(2)}</li>`;
+        categorySelect.innerHTML += `<option value="${idx}">${c.name}</option>`;
+      });
     }
 
+    // Add category locally
     function addCategory() {
-      alert("Add category disabled without backend.");
+      const name = document.getElementById("new-category").value.trim();
+      if (!name) return alert("Enter a category name!");
+
+      // Check duplicate
+      if (categories.find(c => c.name.toLowerCase() === name.toLowerCase())) {
+        return alert("Category already exists!");
+      }
+
+      categories.push({ name, current_amount: 0 });
+      document.getElementById("new-category").value = "";
+      loadCategories();
     }
 
+    // Load expenses into list
     function loadExpenses() {
       expenseList.innerHTML = "";
-      // No DB: keep empty for now
+
+      expenses.forEach((e) => {
+        const categoryName = e.categoryId === "" || e.categoryId === null
+          ? "No Category"
+          : (categories[e.categoryId]?.name || "No Category");
+
+        expenseList.innerHTML += `<li>${e.name} - $${e.amount.toFixed(2)} (${categoryName})</li>`;
+      });
     }
 
+    // Add expense locally
     function addExpense() {
-      alert("Add expense disabled without backend.");
+      const name = document.getElementById("expense-name").value.trim();
+      const amountStr = document.getElementById("expense-amount").value.trim();
+      const amount = parseFloat(amountStr);
+      const categoryId = document.getElementById("category-select").value;
+
+      if (!name || isNaN(amount) || amount <= 0) {
+        return alert("Enter valid expense name and amount!");
+      }
+
+      expenses.unshift({ name, amount, categoryId: categoryId || null });
+
+      // Update category amount if category selected
+      if (categoryId !== "") {
+        categories[categoryId].current_amount -= amount;
+      }
+
+      // Clear inputs
+      document.getElementById("expense-name").value = "";
+      document.getElementById("expense-amount").value = "";
+      document.getElementById("category-select").value = "";
+
+      loadCategories();
+      loadExpenses();
     }
 
-    // On load show login screen by default
+    // Expose functions globally so inline onclick works
+    window.login = login;
+    window.signup = signup;
+    window.logout = logout;
+    window.addCategory = addCategory;
+    window.addExpense = addExpense;
+
+    // On page load
     window.onload = () => {
-      if (!loggedIn) {
-        authSection.classList.remove("hidden");
-        dashboard.classList.add("hidden");
-      }
+      loggedIn = false;
+      authSection.classList.remove("hidden");
+      dashboard.classList.add("hidden");
     };
   </script>
 </body>
