--- a/index.html
+++ b/index.html
@@ -3,309 +3,64 @@
 <head>
   <title>🐷 Piggy Bank - Saving Tracker</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: rgb(223, 106, 125);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-
-    .card {
-      background-color: white;
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      text-align: center;
-      width: 350px;
-      max-height: 90vh;
-      overflow-y: auto;
-    }
-
-    .card img {
-      width: 100px;
-      height: 100px;
-      margin-bottom: 20px;
-    }
-
-    .card h1 {
-      margin: 0 0 10px 0;
-      font-size: 28px;
-      color: rgb(223, 106, 125);
-    }
-
-    .card h2 {
-      margin-bottom: 20px;
-      font-size: 22px;
-      color: #333;
-    }
-
-    .card input {
-      width: 80%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    .card button {
-      width: 40%;
-      padding: 10px;
-      margin: 10px 5px 0 5px;
-      border-radius: 8px;
-      border: none;
-      font-size: 16px;
-      cursor: pointer;
-      color: white;
-    }
-
-    .card button.login-btn {
-      background-color: rgb(223, 106, 125);
-    }
-
-    .card button.signup-btn {
-      background-color: rgb(100, 181, 246);
-    }
-
-    .card button:hover {
-      opacity: 0.9;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    h3 {
-      margin-top: 25px;
-      color: #333;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    ul li {
-      margin: 5px 0;
-      padding: 5px;
-      border-bottom: 1px solid #ddd;
-      text-align: left;
-    }
-
-    select, input[type=number] {
-      width: 80%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
+    /* Your CSS here */
   </style>
 
-  <!-- Firebase CDN scripts -->
-  <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js"></script>
+  <!-- Firebase v8 CDN scripts -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
 <body>
-  <!-- Login -->
-  <div id="auth-section" class="card">
-    <img src="" alt="Piggy Bank Logo" />
-    <h1>Piggy Bank</h1>
-    <h2>Login</h2>
-    <input type="email" id="email" placeholder="Email"><br>
-    <input type="password" id="password" placeholder="Password"><br>
-    <button class="login-btn" onclick="login()">Login</button>
-  </div>
+  <!-- Your HTML elements -->
 
-  <!-- Dashboard -->
-  <div id="dashboard" class="card hidden">
-    <h1>Piggy Bank Dashboard</h1>
-    <button class="login-btn" onclick="logout()">Logout</button>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyB03PiDFmzdKIGJsl9mBdSqjqcYQallUTk",
+      authDomain: "piggybank-da942.firebaseapp.com",
+      projectId: "piggybank-da942",
+      storageBucket: "piggybank-da942.appspot.com",
+      messagingSenderId: "270202155163",
+      appId: "1:270202155163:web:09e87be83fecc7fdbe163e",
+      measurementId: "G-B8QG7CDZ8J"
+    };
 
-    <h3>Categories</h3>
-    <ul id="category-list"></ul>
-    <input type="text" id="new-category" placeholder="New Category">
-    <button class="signup-btn" onclick="addCategory()">Add Category</button>
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
 
-    <h3>Add Expense</h3>
-    <input type="text" id="expense-name" placeholder="Expense Name"><br>
-    <input type="number" id="expense-amount" placeholder="Amount"><br>
-    <select id="category-select"></select><br>
-    <button class="signup-btn" onclick="addExpense()">Add Expense</button>
+    const auth = firebase.auth();
+    const db = firebase.firestore();
 
-    <h3>Expenses History</h3>
-    <ul id="expense-list"></ul>
-  </div>
+    // Your functions: login, logout, addCategory, addExpense, etc.
 
-<script>
-  // Your web app's Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyB03PiDFmzdKIGJsl9mBdSqjqcYQallUTk",
-    authDomain: "piggybank-da942.firebaseapp.com",
-    projectId: "piggybank-da942",
-    storageBucket: "piggybank-da942.appspot.com",
-    messagingSenderId: "270202155163",
-    appId: "1:270202155163:web:09e87be83fecc7fdbe163e",
-    measurementId: "G-B8QG7CDZ8J"
-  };
-
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-
-  const authSection = document.getElementById("auth-section");
-  const dashboard = document.getElementById("dashboard");
-  const categoryList = document.getElementById("category-list");
-  const categorySelect = document.getElementById("category-select");
-  const expenseList = document.getElementById("expense-list");
-
-  // Login function
-  function login() {
-    const email = document.getElementById("email").value.trim();
-    const password = document.getElementById("password").value;
-    if (!email || !password) {
-      alert("Please enter email and password");
-      return;
-    }
-    auth.signInWithEmailAndPassword(email, password)
-      .then(() => {
-        // Successful login handled by onAuthStateChanged listener
-      })
-      .catch(error => alert(error.message));
-  }
-
-  // Logout function
-  function logout() {
-    auth.signOut()
-      .then(() => {
-        // Successful logout handled by onAuthStateChanged listener
-      })
-      .catch(error => alert(error.message));
-  }
-
-  // Auth state listener
-  auth.onAuthStateChanged(async user => {
-    if (user) {
-      authSection.classList.add("hidden");
-      dashboard.classList.remove("hidden");
-
-      await loadCategories(user.uid);
-      await loadExpenses(user.uid);
-    } else {
-      authSection.classList.remove("hidden");
-      dashboard.classList.add("hidden");
-
-      // Clear UI
-      categoryList.innerHTML = "";
-      expenseList.innerHTML = "";
-      categorySelect.innerHTML = "<option value=''>No Category</option>";
-
-      document.getElementById("email").value = "";
-      document.getElementById("password").value = "";
-    }
-  });
-
-  // Load categories from Firestore
-  async function loadCategories(userId) {
-    categoryList.innerHTML = "";
-    categorySelect.innerHTML = "<option value=''>No Category</option>";
-
-    const colRef = db.collection("users").doc(userId).collection("categories");
-    const snapshot = await colRef.get();
-
-    snapshot.forEach(docSnap => {
-      const c = docSnap.data();
-      categoryList.innerHTML += `<li>${c.name} - $${c.current_amount || 0}</li>`;
-      categorySelect.innerHTML += `<option value="${docSnap.id}">${c.name}</option>`;
-    });
-  }
-
-  // Add a new category
-  async function addCategory() {
-    const user = auth.currentUser;
-    if (!user) return alert("Not logged in");
-
-    const name = document.getElementById("new-category").value.trim();
-    if (!name) return alert("Enter a category name!");
-
-    const colRef = db.collection("users").doc(user.uid).collection("categories");
-    await colRef.add({
-      name,
-      current_amount: 0,
-      created_at: firebase.firestore.FieldValue.serverTimestamp()
-    });
-
-    document.getElementById("new-category").value = "";
-    await loadCategories(user.uid);
-  }
-
-  // Load expenses from Firestore
-  async function loadExpenses(userId) {
-    expenseList.innerHTML = "";
-
-    const expensesRef = db.collection("users").doc(userId).collection("expenses").orderBy("created_at", "desc");
-    const snap = await expensesRef.get();
-
-    snap.forEach(docSnap => {
-      const e = docSnap.data();
-      const categoryName = categorySelect.querySelector(`option[value='${e.categoryId}']`)?.text || "No Category";
-      expenseList.innerHTML += `<li>${e.name} - $${e.amount} (${categoryName})</li>`;
-    });
-  }
-
-  // Add a new expense
-  async function addExpense() {
-    const user = auth.currentUser;
-    if (!user) return alert("Not logged in");
-
-    const name = document.getElementById("expense-name").value.trim();
-    const amount = parseFloat(document.getElementById("expense-amount").value);
-    const categoryId = document.getElementById("category-select").value;
-
-    if (!name || isNaN(amount)) {
-      alert("Enter valid expense name and amount!");
-      return;
-    }
-
-    const expensesRef = db.collection("users").doc(user.uid).collection("expenses");
-    await expensesRef.add({
-      name,
-      amount,
-      categoryId: categoryId || null,
-      created_at: firebase.firestore.FieldValue.serverTimestamp()
-    });
-
-    // Update category's current_amount if applicable
-    if (categoryId) {
-      const catRef = db.collection("users").doc(user.uid).collection("categories").doc(categoryId);
-      const catDoc = await catRef.get();
-      if (catDoc.exists) {
-        const catData = catDoc.data();
-        await catRef.update({ current_amount: (catData.current_amount || 0) - amount });
+    function login() {
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value;
+      if (!email || !password) {
+        alert("Please enter email and password");
+        return;
       }
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {})
+        .catch(e => alert(e.message));
     }
 
-    document.getElementById("expense-name").value = "";
-    document.getElementById("expense-amount").value = "";
-    document.getElementById("category-select").value = "";
+    function logout() {
+      auth.signOut().catch(e => alert(e.message));
+    }
 
-    await loadCategories(user.uid);
-    await loadExpenses(user.uid);
-  }
+    auth.onAuthStateChanged(async user => {
+      if(user) {
+        // Show dashboard, load data etc
+      } else {
+        // Show login
+      }
+    });
 
-  // Expose functions globally for inline onclick handlers
-  window.login = login;
-  window.logout = logout;
-  window.addCategory = addCategory;
-  window.addExpense = addExpense;
-
-</script>
+    // Expose globally
+    window.login = login;
+    window.logout = logout;
+    // Add other functions similarly
+  </script>
 </body>
 </html>
